log
Sun Mar 13 16:50:39 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c74f28b
Sun Mar 13 16:51:22 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1022747
Sun Mar 13 16:52:17 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f280e90
Sun Mar 13 16:56:03 HSP 2022: 
test.c: In function 'test_suma_n':
test.c:82:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.50s %d,",msg,a[i]);
                 ^~~             ~~~
test.c:84:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%.50s]",msg);
             ^~~          ~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e872749
